--- a/package.json
+++ b/package.json
@@ -35,12 +35,11 @@
 		"ajv": "^6.12.0",
 		"emotion-theming": "^10.0.27",
 		"ramda": "^0.27.0",
-		"react": "^16.12.0",
-		"react-dom": "^16.12.0",
 		"react-icons": "^3.9.0"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.9.0",
+		"@babel/core": "^7.13.8",
+		"@babel/preset-react": "^7.12.13",
 		"@babel/register": "^7.4.4",
 		"@storybook/addon-actions": "^5.3.18",
 		"@storybook/addon-console": "^1.2.1",
@@ -53,30 +52,32 @@
 		"@types/enzyme": "^3.10.5",
 		"@types/node": "^13.7.0",
 		"@types/ramda": "^0.27.3",
-		"@types/react": "^16.9.23",
-		"@typescript-eslint/eslint-plugin": "^2.19.2",
-		"@typescript-eslint/parser": "^2.19.2",
+		"@types/react": "^17.0.2",
+		"@typescript-eslint/eslint-plugin": "^4.0.0",
+		"@typescript-eslint/parser": "^4.0.0",
 		"ava": "^3.5.0",
 		"babel-eslint": "^10.0.1",
 		"babel-loader": "^8.1.0",
-		"babel-preset-react-app": "^8.0.0",
 		"cssnano": "^4.1.10",
 		"dotenv": "^8.2.0",
 		"enzyme": "^3.9.0",
 		"enzyme-adapter-react-16": "^1.12.1",
-		"eslint": "^6.8.0",
-		"eslint-config-xo-react": "^0.23.0",
-		"eslint-config-xo-typescript": "^0.26.0",
-		"eslint-plugin-react": "^7.18.3",
-		"eslint-plugin-react-hooks": "^2.3.0",
+		"eslint": "^7.21.0",
+		"eslint-config-xo-react": "^0.24.0",
+		"eslint-config-xo-typescript": "^0.38.0",
+		"eslint-plugin-react": "^7.22.0",
+		"eslint-plugin-react-hooks": "^4.2.0",
 		"nyc": "^15.0.0",
+		"react": "^17.0.0",
 		"react-docgen-typescript-loader": "^3.7.2",
+		"react-dom": "^17.0.0",
+		"react-scripts": "^4.0.0",
 		"rimraf": "^3.0.2",
-		"ts-loader": "^6.2.2",
-		"ts-node": "^8.6.2",
-		"ts-sinon": "^1.0.25",
-		"typescript": "^3.8.3",
-		"xo": "^0.26.1"
+		"ts-loader": "^8.0.17",
+		"ts-node": "^9.1.1",
+		"ts-sinon": "^2.0.1",
+		"typescript": "^4.1.0",
+		"xo": "^0.38.2"
 	},
 	"xo": {
 		"envs": [
@@ -95,10 +96,13 @@
 		],
 		"prettier": true,
 		"semicolon": false,
-		"space": 4,
 		"rules": {
 			"capitalized-comments": 0,
-			"ava/no-ignored-test-files": 0
+			"ava/no-ignored-test-files": 0,
+			"require-array-sort-compare": 0,
+			"@typescript-eslint/consistent-type-assertions": 0,
+			"@typescript-eslint/no-confusing-void-expression": 0,
+			"react/jsx-no-constructed-context-values": 0
 		}
 	},
 	"nyc": {
