--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@optum/json-schema-editor",
-	"version": "1.0.3",
+	"version": "1.1.0",
 	"description": "JsonSchema Editor React Control",
 	"repository": "https://github.com/optum/jsonschema-editor-react",
 	"license": "Apache 2.0",
@@ -22,8 +22,7 @@
 	},
 	"main": "dist/index.js",
 	"files": [
-		"dist",
-		"src"
+		"dist"
 	],
 	"keywords": [
 		"react"
@@ -37,18 +36,24 @@
 		"ramda": "^0.27.0",
 		"react-icons": "^3.9.0"
 	},
+	"peerDependencies": {
+		"react": "^17.0.0",
+		"react-dom": "^17.0.0"
+	},
 	"devDependencies": {
 		"@babel/core": "^7.13.8",
 		"@babel/preset-react": "^7.12.13",
 		"@babel/register": "^7.4.4",
-		"@storybook/addon-actions": "^5.3.18",
-		"@storybook/addon-console": "^1.2.1",
-		"@storybook/addon-docs": "^5.3.18",
-		"@storybook/addon-info": "^5.3.18",
-		"@storybook/addon-links": "^5.3.18",
-		"@storybook/addons": "^5.3.18",
-		"@storybook/preset-typescript": "1.2.2",
-		"@storybook/react": "^5.3.18",
+		"@storybook/addon-actions": "^6.1.20",
+		"@storybook/addon-essentials": "^6.1.20",
+		"@storybook/addon-links": "^6.1.20",
+		"@storybook/node-logger": "^6.1.20",
+		"@storybook/preset-create-react-app": "^3.1.6",
+		"@storybook/react": "^6.1.20",
+		"@storybook/addon-console": "^1.2.3",
+		"@storybook/addon-docs": "^6.1.20",
+		"@storybook/addon-info": "^5.3.21",
+		"@storybook/preset-typescript": "^3.0.0",
 		"@types/enzyme": "^3.10.5",
 		"@types/node": "^13.7.0",
 		"@types/ramda": "^0.27.3",
