--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,26 @@
 {
-	"compilerOptions": {
-		"target": "ES6",
-		"module": "commonjs",
-		"jsx": "react",
-		"lib": ["dom", "es2017"],
-		"rootDirs": ["src", "stories"],
-		"moduleResolution": "node",
-		"allowJs": true,
-		"noEmit": false,
-		"strict": true,
-		"allowSyntheticDefaultImports": true,
-		"noImplicitAny": true,
-		"skipLibCheck": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
-		"removeComments": false,
-		"preserveConstEnums": true,
-		"sourceMap": true,
-		"esModuleInterop": true,
-		"forceConsistentCasingInFileNames": true,
-		"resolveJsonModule": true,
-		"isolatedModules": true
-	},
-	"exclude": ["node_modules", "docs-wrapper.ts"],
-	"include": [
-		"**/*.ts",
-		"**/*.tsx",
-		"test/setup.js",
-		"docs-wrapper.tsx",
-		"wrapper-component.js"
-	]
-}
+    "compilerOptions": {
+      "outDir": "build/lib",
+      "module": "commonjs",
+      "target": "es5",
+      "lib": ["es5", "es6", "es7", "es2017", "dom"],
+      "sourceMap": true,
+      "allowJs": false,
+      "jsx": "react",
+      "moduleResolution": "node",
+      "rootDir": "src",
+      "baseUrl": "src",
+      "forceConsistentCasingInFileNames": true,
+      "noImplicitReturns": true,
+      "noImplicitThis": true,
+      "noImplicitAny": true,
+      "strictNullChecks": true,
+      "suppressImplicitAnyIndexErrors": true,
+      "noUnusedLocals": true,
+      "declaration": true,
+      "allowSyntheticDefaultImports": true,
+      "experimentalDecorators": true
+    },
+    "include": ["src/**/*"],
+    "exclude": ["node_modules", "dist", "docs"]
+  }
