--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@optum/json-schema-editor",
-	"version": "1.0.3",
+	"version": "1.1.0",
 	"description": "JsonSchema Editor React Control",
 	"repository": "https://github.com/optum/jsonschema-editor-react",
 	"license": "Apache 2.0",
@@ -11,10 +11,9 @@
 		"build": "rimraf dist && tsc -p tsconfig.build.json",
 		"test": "xo && nyc ava",
 		"lint": "xo --fix",
-		"clean": "rimraf coverage dist .nyc_output",
+		"clean": "rimraf coverage dist docs .nyc_output",
 		"storybook": "xo && start-storybook -p 6006",
-		"build-storybook": "build-storybook --docs -c .storybook -o docs",
-		"pre-release": "rimraf dist && tsc -p tsconfig.build.json && build-storybook --docs -c .storybook -o docs"
+		"build-storybook": "rimraf dist docs && build-storybook --docs -o docs"
 	},
 	"publishConfig": {
 		"access": "public",
@@ -22,8 +21,7 @@
 	},
 	"main": "dist/index.js",
 	"files": [
-		"dist",
-		"src"
+		"dist"
 	],
 	"keywords": [
 		"react"
@@ -35,48 +33,55 @@
 		"ajv": "^6.12.0",
 		"emotion-theming": "^10.0.27",
 		"ramda": "^0.27.0",
-		"react": "^16.12.0",
-		"react-dom": "^16.12.0",
 		"react-icons": "^3.9.0"
 	},
+	"peerDependencies": {
+		"react": "^17.0.0",
+		"react-dom": "^17.0.0"
+	},
 	"devDependencies": {
-		"@babel/core": "^7.9.0",
+		"@babel/core": "^7.13.8",
+		"@babel/preset-react": "^7.12.13",
 		"@babel/register": "^7.4.4",
-		"@storybook/addon-actions": "^5.3.18",
-		"@storybook/addon-console": "^1.2.1",
-		"@storybook/addon-docs": "^5.3.18",
-		"@storybook/addon-info": "^5.3.18",
-		"@storybook/addon-links": "^5.3.18",
-		"@storybook/addons": "^5.3.18",
-		"@storybook/preset-typescript": "1.2.2",
-		"@storybook/react": "^5.3.18",
+		"@storybook/addon-actions": "^6.1.20",
+		"@storybook/addon-essentials": "^6.1.20",
+		"@storybook/addon-links": "^6.1.20",
+		"@storybook/node-logger": "^6.1.20",
+		"@storybook/preset-create-react-app": "^3.1.6",
+		"@storybook/react": "^6.1.20",
+		"@storybook/addon-console": "^1.2.3",
+		"@storybook/addon-docs": "^6.1.20",
+		"@storybook/addon-info": "^5.3.21",
+		"@storybook/preset-typescript": "^3.0.0",
 		"@types/enzyme": "^3.10.5",
 		"@types/node": "^13.7.0",
 		"@types/ramda": "^0.27.3",
-		"@types/react": "^16.9.23",
-		"@typescript-eslint/eslint-plugin": "^2.19.2",
-		"@typescript-eslint/parser": "^2.19.2",
+		"@types/react": "^17.0.2",
+		"@typescript-eslint/eslint-plugin": "^4.0.0",
+		"@typescript-eslint/parser": "^4.0.0",
 		"ava": "^3.5.0",
 		"babel-eslint": "^10.0.1",
 		"babel-loader": "^8.1.0",
-		"babel-preset-react-app": "^8.0.0",
 		"cssnano": "^4.1.10",
 		"dotenv": "^8.2.0",
 		"enzyme": "^3.9.0",
 		"enzyme-adapter-react-16": "^1.12.1",
-		"eslint": "^6.8.0",
-		"eslint-config-xo-react": "^0.23.0",
-		"eslint-config-xo-typescript": "^0.26.0",
-		"eslint-plugin-react": "^7.18.3",
-		"eslint-plugin-react-hooks": "^2.3.0",
+		"eslint": "^7.21.0",
+		"eslint-config-xo-react": "^0.24.0",
+		"eslint-config-xo-typescript": "^0.38.0",
+		"eslint-plugin-react": "^7.22.0",
+		"eslint-plugin-react-hooks": "^4.2.0",
 		"nyc": "^15.0.0",
+		"react": "^17.0.0",
 		"react-docgen-typescript-loader": "^3.7.2",
+		"react-dom": "^17.0.0",
+		"react-scripts": "^4.0.0",
 		"rimraf": "^3.0.2",
-		"ts-loader": "^6.2.2",
-		"ts-node": "^8.6.2",
-		"ts-sinon": "^1.0.25",
-		"typescript": "^3.8.3",
-		"xo": "^0.26.1"
+		"ts-loader": "^8.0.17",
+		"ts-node": "^9.1.1",
+		"ts-sinon": "^2.0.1",
+		"typescript": "^4.1.0",
+		"xo": "^0.38.2"
 	},
 	"xo": {
 		"envs": [
@@ -95,10 +100,13 @@
 		],
 		"prettier": true,
 		"semicolon": false,
-		"space": 4,
 		"rules": {
 			"capitalized-comments": 0,
-			"ava/no-ignored-test-files": 0
+			"ava/no-ignored-test-files": 0,
+			"require-array-sort-compare": 0,
+			"@typescript-eslint/consistent-type-assertions": 0,
+			"@typescript-eslint/no-confusing-void-expression": 0,
+			"react/jsx-no-constructed-context-values": 0
 		}
 	},
 	"nyc": {
